# Atlas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  config.py  docker-compose.yml  launch.py  prompt.txt  pyproject.toml  requirements.txt  show_composition.py  show_protocol.py
agents/: budget_packing.py  cuisine_expert.py  destination_expert.py  itinerary_planner.py  weather_advisor.py
atlas/: __init__.py  __main__.py  config.py  main.py  runtime.py
atlas/a2a/: __init__.py  cards.py  errors.py  extensions.py  ids.py  methods.py  models.py
atlas/api/: __init__.py  binding.py  (+3 more)
common/: a2a.py  config.py  llm.py  memory.py  persona.py
docs/: A2A_CORE_vs_ORG_EXTENSIONS.md  A2A_EXPLAINED.md  A2A_PATTERNS.md  ARCHITECTURE.md  COMMUNICATION_PATTERNS.md  DOCUMENTATION.md  MCP_AND_COMPOSITION.md  MEMORY_AND_INTENT.md  WALKTHROUGH.md  a2a-explained.md  a2a-implemented.md  a2a-not-implemented.md  a2a-partial.md  a2a.md  engine.md  policy.md
gateway/: __init__.py  app.py
llm/: __init__.py  client.py
mcp_servers/: weather_server.py
memory/: __init__.py  store.py
orchestrator/: agent.py  orchestrator.py
org/: __init__.py  ceo.py  cognition.py  contract_net.py  delegation.py  dynamic_runtime.py  employee.py  envelope.py  ledger.py  meeting.py  metrics.py  onboarding.py  registry.py  runtime.py  telemetry.py  topology.py
protocol/: __init__.py  client.py  models.py  server.py  states.py
scripts/: behavior_eval.py  demo_mission.py  demo_trip.py  policy_eval.py  runtime_eval.py  smoke_compare.py  smoke_dynamic.py  smoke_org.py  smoke_protocol.py  smoke_topologies.py  watch.py
tests/: conftest.py  test_a2a_v1.py  test_api.py  test_cron.py  test_db.py  test_federation.py  test_llm.py  test_network.py  test_orchestrator.py  test_org_generator.py  test_policy_engine.py  test_push.py  test_security.py
web/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts  vite.config.ts
(+76 files in other folders)
