[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — A2A agent-to-agent communication platform (a 100-agent software company demonstrator)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "groq>=0.11",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# No [build-system]: Atlas is a "virtual" uv project. `uv sync` installs the
# dependencies into .venv but does NOT build/install the atlas package itself.
# Run from the repo root with `python -m atlas` (cwd is on sys.path).

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
